<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/form_container_bg"
        android:padding="24dp"
        android:elevation="8dp"
        android:clipToOutline="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_light"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_light"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_light"
            android:background="@drawable/edittext_bg"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_hobby"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/sports"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/dancing"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dancing"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/traveling"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/traveling"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:padding="12dp"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:clickable="true"
            android:textStyle="bold"
            android:focusable="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
